# internal/models/user.go
@@ -7,6 +7,7 @@ type User struct {
 	Email     string    `json:"email"`
 	Password  string    `json:"-"`
 	FullName  string    `json:"full_name"`
+	Avatar    *string   `json:"avatar,omitempty" db:"avatar"`
 	RoleID    int       `json:"role_id"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
@@ -37,4 +38,9 @@ type CreateUserRequest struct {
 type UpdateUserRequest struct {
 	FullName *string `json:"full_name,omitempty"`
 	RoleID   *int    `json:"role_id,omitempty"`
+}
+
+type UpdateProfileRequest struct {
+	FullName *string `json:"full_name,omitempty"`
+	Avatar   *string `json:"avatar,omitempty"`
 }
